--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -21,6 +21,18 @@
               <li><%= link_to "ログイン", login_path %></li>
             <% else %>
               <li>
+                <%= link_to ranking_have_path do %>
+                  <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
+                  Haveランキング
+                <% end %>
+              </li>
+              <li>
+                <%= link_to ranking_want_path do %>
+                  <span class="glyphicon glyphicon-heart" aria-hidden="true"></span>
+                  Wantランキング
+                <% end %>
+              </li>
+              <li>
                 <%= link_to new_item_path do %>
                   <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
                   アイテムを追加
